syntax = "proto3";

package service.ourchat.session.join_session.v1;

message JoinSessionRequest {
  uint64 session_id = 1;
  optional string leave_message = 2;
}

message JoinSessionResponse {}

message JoinSessionApproval {
  uint64 session_id = 1;
  uint64 user_id = 2;
  optional string leave_message = 3;
}

message AcceptJoinSessionRequest {
  uint64 session_id = 1;
  uint64 user_id = 2;
  bool accepted = 3;
}

message AcceptJoinSessionResponse {}

message AcceptJoinSessionNotification {
  uint64 session_id = 1;
  bool accepted = 2;
}
